--- a/bot/webapp/index.html
+++ b/bot/webapp/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CryptoHunter Miner</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
+<link rel="stylesheet" href="/webapp/style.css">
+<script src="/webapp/script.js"></script>
 </head>
 <body>
     <div class="container">
