--- a/bot/webapp/index.html
+++ b/bot/webapp/index.html
@@ -211,7 +211,7 @@
                     <input type="number" id="invest-amount" class="input-field" data-i18n-placeholder="min_ton" placeholder="Минимум 1 TON" min="1">
                 </div>
                 
-                <button onclick="createDeposit()" class="btn big-btn">Сгенерировать QR для оплаты</button>
+                <button onclick="createDeposit()" Сгенерировать QR для оплаты>
                 
                 <!-- QR СЕКЦИЯ -->
                 <div id="qr-section" style="display:none; text-align:center; margin-top:20px;">
